Layout fix for Hours to avoid wrapping on iphone x

--- a/themes/creative/static/css/creative.css
+++ b/themes/creative/static/css/creative.css
@@ -242,7 +242,7 @@ header .header-content {
 }
 
 .header-hours {
-    padding: 10px 20px;
+    padding: 10px 15px;
     position: relative;
     top: 51px;
     border-radius: 0;
